# bbsg_a05

./: :w  Cargo.toml  README.md
bbsg_a05/: Cargo.toml
bbsg_a05/src/: ben1.rs  ben2.rs  cst1.rs  cst2.rs  dcl.rs  imp.rs  lib.rs  m02.rs  p08.rs  p09.rs  stg1.rs  stg2.rs  stg3.rs  utl.rs
bbsg_a05/src/img/: fda01.rs  mod.rs
bbsg_a05/src/web/: fda01.rs  mod.rs  sbb01.rs  sbb10.rs  sbb11.rs  sbb12.rs  sbb13.rs  tra01.rs
bbsg_a05/templates/: sbb00.html  tra00.html
bbsg_bin/: Cargo.toml
bbsg_bin/src/: main.rs
